--- a/package.json
+++ b/package.json
@@ -2,6 +2,6 @@
   "main": "main",
   "registry": "jspm",
   "dependencies": {
-    "rsvp": "github:tildeio/rsvp.js@^3.0.8"
+    "rsvp": "github:tildeio/rsvp.js@3.0.7"
   }
 }
